syntax = "proto3";

package AcFunDanmu;

message ZtLiveCsUserExit {}

message ZtLiveCsUserExitAck {}