syntax = "proto3";

package AcFunDanmu;

import "ZtLiveNotifySignalItem.proto";

message ZtLiveScNotifySignal {
	repeated ZtLiveNotifySignalItem item = 1;
}
