syntax = "proto3";

package AcFunDanmu;

import "ZtLiveStateSignalItem.proto";

message ZtLiveScStateSignal {
	repeated ZtLiveStateSignalItem item = 1;
}