syntax = "proto3";

option go_package = ".;acproto";

package AcFunDanmu;

message ZtLiveScTicketInvalid {}
